# Sys-aflevering-Sidste

balance-ball-handin-main/: .gitignore  CMakeLists.txt  README.md  exercise-ldd_button.md
balance-ball-handin-main/figures/: balance_ball_cd.puml
balance-ball-handin-main/include/: I2Cdriver.hpp  SPIdriver.hpp  accelerometer.hpp  bitmaps.hpp  broker.hpp  button.hpp  display.hpp  game_control.hpp  game_state.hpp  iconsumer.hpp  led.hpp  logger.hpp  message.hpp
balance-ball-handin-main/src/: I2Cdriver.cpp  SPIdriver.cpp  accelerometer.cpp  balance_ball.cpp  broker.cpp  button.cpp  display.cpp  game_control.cpp  logger.cpp
gyro_tilt/: Makefile
gyro_tilt/src/: gyro_tilt.cpp
